projects/vb6parse/snapshots/parsers/cst/option_statements/option_compare_database_access_only.snap
---
source: projects/vb6parse/src/parsers/cst/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: CompareKeyword
          text: Compare
        - kind: Whitespace
          text: " "
        - kind: DatabaseKeyword
          text: Database
        - kind: Newline
          text: "\n"
