projects/vb6parse/snapshots/parsers/cst/option_statements/option_compare_with_comment.snap
---
source: projects/vb6parse/src/parsers/cst/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: CompareKeyword
          text: Compare
        - kind: Whitespace
          text: " "
        - kind: TextKeyword
          text: Text
        - kind: Whitespace
          text: " "
        - kind: EndOfLineComment
          text: "' Case-insensitive"
        - kind: Newline
          text: "\n"
