projects/vb6parse/snapshots/parsers/cst/option_statements/option_compare_with_line_continuation.snap
---
source: projects/vb6parse/src/parsers/cst/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: " "
        - kind: Underscore
          text: _
        - kind: Newline
          text: "\n"
        - kind: CompareKeyword
          text: Compare
        - kind: Whitespace
          text: " "
        - kind: TextKeyword
          text: Text
        - kind: Newline
          text: "\n"
