projects/vb6parse/snapshots/parsers/cst/option_statements/option_compare_with_whitespace.snap
---
source: projects/vb6parse/src/parsers/cst/option_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: OptionStatement
      children:
        - kind: OptionKeyword
          text: Option
        - kind: Whitespace
          text: "  "
        - kind: CompareKeyword
          text: Compare
        - kind: Whitespace
          text: "  "
        - kind: BinaryKeyword
          text: Binary
        - kind: Newline
          text: "\n"
